# kv_raft

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: heal.sh  netem.sh  partition.sh
src/app/: main.py
src/app/api/: router.py
src/app/core/: config.py
src/app/raft/: persistence.py  raft.py  types.py
src/tests/: conftest.py  test_raft_cluster.py  test_raft_failures.py  test_raft_quorum_negative.py  test_raft_read_quorum.py
src/tools/: KV-Raft Local.postman_environment.json  KV-Raft.postman_collection.json
